Update Controller
Controller Atualizada